--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;700&family=Open+Sans:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <head> </head>
+    <head>
+      <nav>
+        <h3 class="nav-title">Hary</h3>
+        <ul>
+          <li><a href="Portfolio">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li><button>Hire me</button></li>
+        </ul>
+      </nav>
+    </head>
     <body></body>
     <footer></footer>
   </body>
