--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <head>
       <nav>
-        <h3 class="nav-title">Hary</h3>
+        <h3 class="nav-title">Ha<span class="text-primary">r</span>y</h3>
         <ul>
           <li><a href="Portfolio">Portfolio</a></li>
           <li><a href="">Blog</a></li>
-          <li><button>Hire me</button></li>
+          <li><button class="btn-primary">Hire me</button></li>
         </ul>
       </nav>
     </head>
